--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,42 @@
+amqp==5.1.1
 anyio==3.7.0
 async-timeout==4.0.2
 beanie==1.19.2
+billiard==4.1.0
+celery==5.3.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 dnspython==2.3.0
 exceptiongroup==1.1.1
 fastapi==0.95.2
+gunicorn==20.1.0
 h11==0.14.0
 hiredis==2.2.3
 httptools==0.5.0
 idna==3.4
+kombu==5.3.1
 lazy-model==0.0.5
 motor==3.1.2
+prompt-toolkit==3.0.38
 pydantic==1.10.8
 pymongo==4.3.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
 PyYAML==6.0
 redis==4.5.5
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 toml==0.10.2
 typing_extensions==4.6.2
+tzdata==2023.3
 uvicorn==0.22.0
 uvloop==0.17.0
+vine==5.0.0
 watchfiles==0.19.0
+wcwidth==0.2.6
 websockets==11.0.3
+zope.interface==6.0
